# learn-opengl-com

./: README.md
creating_a_window/: CMakeLists.txt  CMakeLists_o.txt  helloWindow.cpp  window.cpp
hello-triangle/: CMakeLists.txt  exercise_helloTriangle.cpp  helloTriangle.cpp  test.cpp
shaders/: CMakeLists.txt  default.vs  shader.cpp  shaders.cpp
